[gd_scene load_steps=17 format=3 uid="uid://dpdfeni0ma2ev"]

[ext_resource type="Script" path="res://scenes/main_menu_scene.gd" id="1_4rw5b"]
[ext_resource type="Theme" uid="uid://ctv8t3oqxq6tx" path="res://scenes/button_theme.tres" id="2_lycvu"]
[ext_resource type="Texture2D" uid="uid://ca7hmyuasksyb" path="res://Assets/_Assets/Textures/KitchenChaosLogo.png" id="3_ed6lb"]
[ext_resource type="Material" uid="uid://di1oim2i7t0m7" path="res://Assets/_Assets/Materials/Floor.mat.tres" id="4_p3bme"]
[ext_resource type="Environment" uid="uid://clndxvoywpt7g" path="res://scenes/main scene & player/back_env.tres" id="5_6rye6"]
[ext_resource type="PackedScene" uid="uid://c1e4ah00w8ega" path="res://scenes/main scene & player/PlayerScene.tscn" id="6_isos7"]
[ext_resource type="PackedScene" uid="uid://xa1bo0rf8lk6" path="res://scenes/counters/container_counters/bread_container_counter.tscn" id="8_qdgvt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1rhfd"]
size = Vector3(1.58398, 1, 1.5293)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4xusr"]
resource_name = "Floor"
depth_draw_mode = 1
uv1_scale = Vector3(50, 50, 0)
metadata/unidot_keys = {
"disabledShaderPasses": [],
"m_BuildTextureStacks": [],
"m_CorrespondingSourceObject": [null, 0, null, null],
"m_CustomRenderQueue": -1,
"m_DoubleSidedGI": 0,
"m_EnableInstancingVariants": 0,
"m_InvalidKeywords": [],
"m_LightmapFlags": 4,
"m_ModifiedSerializedProperties": 0,
"m_Name": "Floor",
"m_ObjectHideFlags": 0,
"m_Parent": [null, 0, null, null],
"m_PrefabAsset": [null, 0, null, null],
"m_PrefabInstance": [null, 0, null, null],
"m_SavedProperties": {
"m_Colors": [{
"_BaseColor": Color(1, 1, 1, 1)
}, {
"_Color": Color(1, 1, 1, 1)
}, {
"_EmissionColor": Color(0, 0, 0, 1)
}, {
"_SpecColor": Color(0.2, 0.2, 0.2, 1)
}],
"m_Floats": [{
"_AlphaClip": 0
}, {
"_AlphaToMask": 0
}, {
"_Blend": 0
}, {
"_BlendModePreserveSpecular": 1
}, {
"_BumpScale": 1
}, {
"_ClearCoatMask": 0
}, {
"_ClearCoatSmoothness": 0
}, {
"_Cull": 2
}, {
"_Cutoff": 0.5
}, {
"_DetailAlbedoMapScale": 1
}, {
"_DetailNormalMapScale": 1
}, {
"_DstBlend": 0
}, {
"_DstBlendAlpha": 0
}, {
"_EnvironmentReflections": 1
}, {
"_GlossMapScale": 0
}, {
"_Glossiness": 0
}, {
"_GlossyReflections": 0
}, {
"_Metallic": 0
}, {
"_OcclusionStrength": 1
}, {
"_Parallax": 0.005
}, {
"_QueueOffset": 0
}, {
"_ReceiveShadows": 1
}, {
"_Smoothness": 0.5
}, {
"_SmoothnessTextureChannel": 0
}, {
"_SpecularHighlights": 1
}, {
"_SrcBlend": 1
}, {
"_SrcBlendAlpha": 1
}, {
"_Surface": 0
}, {
"_WorkflowMode": 1
}, {
"_ZWrite": 1
}],
"m_Ints": [],
"m_TexEnvs": [{
"_BaseMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(50, 50),
"m_Texture": [null, 2800000, "a4a30a507a1311a438ecf1507369b28d", 3]
}
}, {
"_BumpMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"_DetailAlbedoMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"_DetailMask": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"_DetailNormalMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"_EmissionMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"_MainTex": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(50, 50),
"m_Texture": [null, 2800000, "a4a30a507a1311a438ecf1507369b28d", 3]
}
}, {
"_MetallicGlossMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"_OcclusionMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"_ParallaxMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"_SpecGlossMap": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"unity_Lightmaps": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"unity_LightmapsInd": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}, {
"unity_ShadowMasks": {
"m_Offset": Vector2(0, 0),
"m_Scale": Vector2(1, 1),
"m_Texture": [null, 0, null, null]
}
}],
"serializedVersion": 3
},
"m_Shader": [null, 4800000, "933532a4fcc9baf4fa0491de14d08ed7", 3],
"m_ValidKeywords": [],
"serializedVersion": 8,
"stringTagMap": {
"RenderType": "Opaque"
}
}

[sub_resource type="PlaneMesh" id="PlaneMesh_0fx8i"]
material = SubResource("StandardMaterial3D_4xusr")

[sub_resource type="BoxShape3D" id="BoxShape3D_lks8q"]
size = Vector3(2, 0.001, 2)

[sub_resource type="PlaneMesh" id="PlaneMesh_hm2ud"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lg3hy"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_abqw0"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8i6da"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0dce1"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[node name="main_menu_scene" type="Node3D"]
script = ExtResource("1_4rw5b")

[node name="Bread_Container_Counter" parent="." instance=ExtResource("8_qdgvt")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.124718, 0, 0.343362)

[node name="StaticBody3D2" type="StaticBody3D" parent="Bread_Container_Counter"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bread_Container_Counter/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.810916, 0)
shape = SubResource("BoxShape3D_1rhfd")

[node name="env&light" type="WorldEnvironment" parent="."]
environment = ExtResource("5_6rye6")

[node name="dl3d" type="DirectionalLight3D" parent="env&light"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.772376, -0.354119, -0.52729, 0.15285, 0.909392, -0.386837, 0.6165, 0.218187, 0.75652, -0.192454, 0.0352846, 1.67127)
current = true
fov = 80.0

[node name="AudioListener3D" type="AudioListener3D" parent="Camera3D"]
current = true

[node name="Player" parent="." instance=ExtResource("6_isos7")]
transform = Transform3D(0.101207, 0, -0.172503, 0, 0.2, 0, 0.172503, 0, 0.101207, 0.210253, 0, 1.16995)

[node name="Ground" type="Node3D" parent="."]

[node name="Plane" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 1.27752, 0, -3.00029)
material_override = ExtResource("4_p3bme")
mesh = SubResource("PlaneMesh_0fx8i")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground/Plane"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/Plane/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_lks8q")

[node name="Wall" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.604527, 0.497286, 0.728195)
visible = false
layers = 4
material_override = ExtResource("4_p3bme")
mesh = SubResource("PlaneMesh_hm2ud")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground/Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/Wall/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_lg3hy")

[node name="Wall4" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(4.37114e-08, -1, 8.74228e-08, -1, -4.37114e-08, 0, 3.82137e-15, -8.74228e-08, -1, 1.39547, 0.497286, 0.728195)
visible = false
layers = 4
material_override = ExtResource("4_p3bme")
mesh = SubResource("PlaneMesh_hm2ud")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground/Wall4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/Wall4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_abqw0")

[node name="Wall2" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, 0.395473, 0.497286, 1.72819)
visible = false
layers = 4
material_override = ExtResource("4_p3bme")
mesh = SubResource("PlaneMesh_hm2ud")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground/Wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/Wall2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_8i6da")

[node name="Wall3" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(-5.73206e-15, 1.31134e-07, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, 1.31134e-07, 0.395473, 0.497286, -0.271805)
visible = false
layers = 4
material_override = ExtResource("4_p3bme")
mesh = SubResource("PlaneMesh_hm2ud")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground/Wall3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/Wall3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0dce1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.833
offset_right = 960.0
offset_bottom = 180.36
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.067
anchor_top = 0.155
anchor_right = 0.533
anchor_bottom = 0.833
offset_left = -0.639999
offset_top = 728.6
offset_right = 0.639893
offset_bottom = -771.64
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/Menu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 80

[node name="GameTitle" type="Label" parent="CanvasLayer/Menu/MarginContainer/Menu"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.968627, 0.854902, 0.54902, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.188235, 0.313726, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 80
text = "Kitchen Chaos
"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Menu/MarginContainer/Menu"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
texture = ExtResource("3_ed6lb")
expand_mode = 1
stretch_mode = 4

[node name="MenuOptions" type="VBoxContainer" parent="CanvasLayer/Menu/MarginContainer/Menu"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 24

[node name="StartButton" type="Button" parent="CanvasLayer/Menu/MarginContainer/Menu/MenuOptions"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme = ExtResource("2_lycvu")
keep_pressed_outside = true
text = "Start Game :)"

[node name="OptionsButton" type="Button" parent="CanvasLayer/Menu/MarginContainer/Menu/MenuOptions"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("2_lycvu")
keep_pressed_outside = true
text = "Options :o"

[node name="QuitButton" type="Button" parent="CanvasLayer/Menu/MarginContainer/Menu/MenuOptions"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme = ExtResource("2_lycvu")
keep_pressed_outside = true
text = "Quit Game :("

[connection signal="button_up" from="CanvasLayer/Menu/MarginContainer/Menu/MenuOptions/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="CanvasLayer/Menu/MarginContainer/Menu/MenuOptions/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="CanvasLayer/Menu/MarginContainer/Menu/MenuOptions/QuitButton" to="." method="_on_quit_button_button_up"]
